<resources>
    <string name="app_name" translatable="false">KidSafe</string>
    <string name="id" translatable="false">487946012349-brimdf043dkkn6de7uspdv91mo7rc9s0.apps.googleusercontent.com</string>
    <string name="parent_name">Parent Name</string>
    <string name="login_button">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">OR</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="select_mode">Select Mode</string>
    <string name="parent_email">Parent email address</string>
    <string name="forgot_password">Reset Password</string>
    <string name="enter_your_email_address">Please enter your email address to request a password reset.</string>
    <string name="your_email">Your email</string>
    <string name="number_of_childs">Number of children:</string>
    <string name="_0">0</string>
    <string name="child_name">Child Name</string>
    <string name="activity_log">Activity Log</string>
    <string name="apps">Apps</string>
    <string name="location">Location</string>
    <string name="child_app_name">App name</string>
    <string name="available_apps">Available Apps</string>
    <string name="this_app_is_blocked_by_your_parents">Is blocked by your parents</string>
    <string name="sender_phone_number">Sender Phone Number</string>
    <string name="message_body">Message Body</string>
    <string name="time_received">Time Received</string>
    <string name="caller_phone_number">Caller Phone Number</string>
    <string name="call_type">Call Type</string>
    <string name="contact_name">Contact Name</string>
    <string name="call_time">Call Time</string>
    <string name="call_duration">Call Duration</string>
    <string name="delete">Delete</string>
    <string name="web_filter" translatable="false">Web Filter</string>
    <string name="setup_a_geofence">Start a GeoFence</string>
    <string name="select_geofence_s_center">Center</string>
    <string name="geofence_s_diameter">Diameter</string>
    <string name="diameter_in_meters">Diameter in meters</string>
    <string name="set_geofence">Set GeoFence</string>
    <string name="device_admin_description">Allow KidSafe to lock the device</string>
    <string name="device_admin" translatable="false">KidSafe</string>
    <string name="device_admin_explanation">KidSafe need to be device admin to be able to lock the phone</string>
    <string name="device_admin_enabled">Device Admin Enabled</string>
    <string name="device_admin_disabled">Device Admin Disabled</string>
    <string name="lock_phone">Lock Phone</string>
    <string name="timer">Timer</string>
    <string name="ok">OK</string>
    <string name="hour">hour</string>
    <string name="phone_unlocked">Phone Unlocked</string>
    <string name="phone_locked">Phone Locked</string>
    <string name="lock_timer_set_after">Phone will be locked after</string>
    <string name="hours">hours</string>
    <string name="web_filter_disabled" translatable="false">Web filter disabled</string>
    <string name="web_filter_enabled" translatable="false">Web filter enabled</string>
    <string name="hh">HH</string>
    <string name="two_dots">:</string>
    <string name="mm">MM</string>
    <string name="and">and</string>
    <string name="minutes">minutes</string>
    <string name="maximum_is_23_hours">Enter a valid hours, maximum is 23 hours</string>
    <string name="maximum_is_59_minutes">Enter a valid minutes, maximum is 59 minutes</string>
    <string name="enter_a_valid_number">Enter a valid number</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="lock_appname" translatable="false">Lock AppName</string>
    <string name="blocked">Blocked</string>
    <string name="enabled">Enabled</string>
    <string name="will_be_blocked_after">will be blocked after</string>
    <string name="keep_me_logged_in">Keep me logged in.</string>
    <string name="remember_me">Remember me</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="authentication_succeeded">Authentication Succeeded</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="email_isnt_registered">Email isn\'t registered</string>
    <string name="wrong_password">Wrong password</string>
    <string name="loading">Loading…</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="this_email_isnt_registered_as_parent">This email isn\'t registered as a parent</string>
    <string name="sign_up_succeeded">Signup succeeded</string>
    <string name="verification_email_sent_it_may_be_within_your_drafts">Verification email sent</string>
    <string name="email_is_already_in_use">Email is already in use</string>
    <string name="weak_password">Weak password</string>
    <string name="sign_up_falied">Signup Failed</string>
    <string name="enter_valid_password">Enter a valid password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="kid" translatable="false">Kid</string>
    <string name="safe" translatable="false">Safe</string>
    <string name="image_uploaded_successfully">Image uploaded successfully</string>
    <string name="image_upload_error">Image upload error</string>
    <string name="language">Language</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="rate_us">Rate Us</string>
    <string name="about">About</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="general">General</string>
    <string name="language_shared_prefs" translatable="false">languageSharedPerfs</string>
    <string name="choose_the_default_language_of_kidsafe">Choose the default language of KidSafe.</string>
    <string name="choose_language">Choose display language</string>
    <string name="account">Account</string>
    <string name="logout_shared_pref" translatable="false">logoutSharedPrefs</string>
    <string name="change_password_shared_prefs" translatable="false">changePasswordSharedPrefs</string>
    <string name="delete_account_shared_prefs" translatable="false">deleteAccountSharedPrefs</string>
    <string name="info">Info</string>
    <string name="rate_us_shared_prefs" translatable="false">rateUsSharedPrefs</string>
    <string name="send_feedback_shared_prefs" translatable="false">sendFeedbackSharedPrefs</string>
    <string name="website">Website</string>
    <string name="version">Version</string>
    <string name="version_number">1.0</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="settings">Settings</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="login_with_google">Login with google</string>
    <string name="new_here">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="confirm">Confirm</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="do_you_want_to_change_password">Do you want to change your password?</string>
    <string name="do_you_want_to_delete_account">Do you want to delete your account?</string>
    <string name="account_deleted">Account Deleted</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password_updated">Password updated</string>
    <string name="old_password_is_wrong">Old password is wrong</string>
    <string name="enter_a_valid_new_email">Enter a valid new email</string>
    <string name="kids">Kids</string>
    <string name="no_kids_added_yet">No kids added yet</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="permission_explanation">Permission Explanation</string>
    <string name="permission_explanation_main">To allow KidSafe to function properly, please accept the following permissions.</string>
    <string name="permission_explanation_sms">We need to be able to read the messages in order to show them to the parent.</string>
    <string name="permission_explanation_phone_calls">We need to be able to get the phone calls information in order to show them to the parent.</string>
    <string name="permission_explanation_location">We need access to the location to allow the parent to see where his child is located at real time.</string>
    <string name="permission_explanation_settings">In order to lock the child\'s phone, lock and unlock the apps, we need the following permissions.</string>
    <string name="permission_name" translatable="false">Permission Name</string>
    <string name="send_sms_permission">Send SMS Permission</string>
    <string name="read_sms_permission">Read SMS Permission</string>
    <string name="receive_sms_permission">Receive SMS Permission</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="send_sms_explanation">This permission is needed to be able to see the messages your child sends</string>
    <string name="phone_state_permission">Phone state permission</string>
    <string name="read_call_log_permission">Read call log permission</string>
    <string name="read_contacts_permission">Read contacts permission</string>
    <string name="read_sms_explanation">This permission is needed to be able to read your child\'s messages</string>
    <string name="receive_sms_explanation">This permission is needed to be able to read the messages received by your child</string>
    <string name="read_phone_state_explanation">This permission is needed to be able to see your child calls info</string>
    <string name="read_call_log_explanation">This permission is needed to let you see your child\'s call log</string>
    <string name="read_contacts_explanation">This permission is needed to get the names of your child\'s contacts</string>
    <string name="location_permission">Location permission</string>
    <string name="write_settings_permission">Write settings permission</string>
    <string name="overlay_permission">Overlay permission</string>
    <string name="package_usage_permission">Package usage permission</string>
    <string name="location_permission_explanation">This permission is needed to allow you to get your child\'s location</string>
    <string name="write_settings_permission_explanation">This permission is needed to allow the KidSafe to block other apps</string>
    <string name="overlay_permission_explanation">This permission is needed to monitor other apps</string>
    <string name="parent">Parent</string>
    <string name="about_message">KidSafe is a free and open source android parental control app which allows parents to keep their children\'s activity under control. KidSafe was developed as a graduation project by the members specified below</string>
    <string name="many_thanks_goes_to_freepik_and_smashiocns_for_the_graphics">Many thanks goes to freepik.com and smashiocns.com for the graphics</string>
    <string name="developers">Developers</string>
    <string name="mahmoud_mansour">Mahmoud Mansour</string>
    <string name="khalid_samir">Khalid Samir</string>
    <string name="supervisor">Supervisor</string>
    <string name="d_marwa_abbas">D. Marwa Abbas</string>
    <string name="_1_0">1.0</string>
</resources>