<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_8dp">


    <TextView
        style="@style/HeaderText"
        android:text="@string/forgot_password" />

    <TextView
        style="@style/BodyText"
        android:text="@string/enter_your_email_address" />

    <EditText
        android:id="@+id/txtRecoveryEmail"
        style="@style/DialogFragmentEditText"
        android:drawableStart="@drawable/ic_mail"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnRecoverPassword"
        style="@style/OkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/btnCancelRecoverPassword"
        style="@style/CancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:text="@string/cancel" />
</LinearLayout>