<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_8dp">

    <TextView
        style="@style/HeaderText"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/txtConfirmationHeader"
        style="@style/BodyText"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/btnConfirm"
        style="@style/OkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/btnCancelConfirm"
        style="@style/CancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:text="@string/cancel" />

</LinearLayout>