<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layoutDirection="locale"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:src="@drawable/ic_launcher_about" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:gravity="center"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kid"
                        android:textColor="@color/flatui_midnight_blue"
                        android:textSize="@dimen/text_size_32sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/safe"
                        android:textColor="@color/flatui_turquoise"
                        android:textSize="@dimen/text_size_32sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textSize="@dimen/text_size_16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_0"
                        android:layout_marginStart="@dimen/margin_4dp"
                        android:textSize="@dimen/text_size_16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:layout_marginEnd="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/about_message"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:text="@string/developers"
                    android:textColor="@color/flatui_midnight_blue"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:text="@string/mahmoud_mansour"
                    android:textSize="@dimen/text_size_16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:text="@string/khalid_samir"
                    android:textSize="@dimen/text_size_16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:text="@string/supervisor"
                    android:textColor="@color/flatui_midnight_blue"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:text="@string/d_marwa_abbas"
                    android:textSize="@dimen/text_size_16sp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:layout_marginEnd="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/many_thanks_goes_to_freepik_and_smashiocns_for_the_graphics"
                android:textAlignment="center" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
